<resources>
    <string name="app_name">Smart Cube</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="begin">Begin</string>
    <string name="send">Send</string>
    <string name="stop">Stop</string>
    <string name="clear">Clear</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="timerFragment">Timer</string>
    <string name="history">History</string>
    <string name="assignToTrackerFragment">Actions</string>
    <string name="settingsFragment">Settings</string>
    <string name="profile">Profile</string>
    <string name="tracker">Tracker</string>
    <string name="not_connected_tracker">not connected</string>
    <string name="log_out">Log out</string>
    <string name="connection_notification_title">Connection service is running</string>
    <string name="not_connected">Not connected</string>
    <string name="actionName">Exploring app</string>
    <string name="trackedAction">TRACKED_ACTION</string>
    <string name="last_added">Last added</string>
    <string name="total_today">Total today</string>
    <string name="device_connected">Device connected</string>
    <string name="device_disconnected">Device disconnected</string>
    <string name="nothing_tracked_yet">Nothing tracked yet</string>
    <string name="actions">Actions</string>

    <string name="assignToTracker">Assign to Tracker</string>
    <string name="my_activities">My activities</string>
    <string name="add_actvity">Add activity</string>
    <string name="fragment_start_action">Start action</string>
    <string name="save">Save activty</string>
    <string name="name">Name</string>
    <string name="color">Color</string>
    <string name="integration">Integration</string>
    <string name="choose_side_of_the_cube">Choose side of the cube</string>
    <string name="edit_actvity">Edit activity</string>
    <string name="delete_actvity">Delete actvity</string>
    <string name="goToEditAction">Go to edit action</string>
</resources>
