<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false"
    android:nestedScrollingEnabled="true"
    android:padding="@dimen/activity_horizontal_margin" >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_command_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_command_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/action_settings" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_enable_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin"
        app:layout_constraintEnd_toStartOf="@+id/button_send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_command_input" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:layout_constraintTop_toTopOf="@+id/button_enable_bt"
        app:layout_constraintBottom_toBottomOf="@+id/button_enable_bt"
        app:layout_constraintEnd_toStartOf="@+id/button_disable_bt"
        app:layout_constraintStart_toEndOf="@+id/button_enable_bt" />

    <Button
        android:id="@+id/button_disable_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="@+id/button_send"
        app:layout_constraintEnd_toStartOf="@+id/button_clear"
        app:layout_constraintStart_toEndOf="@+id/button_send"
        app:layout_constraintTop_toTopOf="@+id/button_send" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="@+id/button_disable_bt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_disable_bt"
        app:layout_constraintTop_toTopOf="@+id/button_disable_bt" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_enable_bt">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isScrollContainer="true"
                android:singleLine="false" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
